5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1749_1531.log
== TEST (2019-05-15 18:14:56) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a(x**z/factorial(y))
	z = z + 2
	y = y + 2
	i = i + 1

soma = 1 - b
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    b = -a(x**z/factorial(y))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:37) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    b = -a(x**z/factorial(y))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:41) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    b = -a(x**z/factorial(y))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:07) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    b = a(x**z/factorial(y))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:25) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(soma)
	
-- OUTPUT:
1.0000000000000069
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:50) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(soma)
	
-- OUTPUT:
0.9999999999999931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:24) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(soma, 10))
	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:38) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(soma, 10))
	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:54) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(soma, 10))
	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:19:55) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:21:19) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:21:42) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:22:12) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 0
z = 0
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:22:44) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 0
z = 0
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:14) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i <= k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:43) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 0
z = 0
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:24:02) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 0
z = 0
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:24:27) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:24:54) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:25:24) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 0
z = 0
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

	soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:26:18) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:26:39) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

y = 2
z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(y))
	z = z + 2
	y = y + 2
	a = -a
	i = i + 1

soma = 1 - b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:11) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1

soma = 1 + b
print(round(b, 10))
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:21) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1

soma = 1 + b
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:30:31) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
   b = b
soma = 1 + b
print(round(b, 10))
	
-- ERROR:
File "XXXX", line 18
    b = b
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:40) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
   b1 = b
soma = 1 + b1
print(round(b, 10))
	
-- ERROR:
File "XXXX", line 18
    b1 = b
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:50) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
b1 =0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
   b1 = b
soma = 1 + b1
print(round(b, 10))
	
-- ERROR:
File "XXXX", line 19
    b1 = b
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:03) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
   b1 = b
	
soma = 1 + b1
print(round(b, 10))
	
-- ERROR:
File "XXXX", line 19
    b1 = b
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:11) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
  
	
soma = 1 + b1
print(round(b, 10))
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:48) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b1 = 0
  
	
   soma = 1 + b1
print(round(b, 10))
	
-- ERROR:
File "XXXX", line 22
    soma = 1 + b1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:30) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	
  
	soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:34:12) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = b + b  
	soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:34:22) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = b + b  
	soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:34:39) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = b + b  
soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:07) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = 1 + b 
soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:19) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = 1 + b 
soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:45) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))


z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	b = 1 + b 
soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:36) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c =0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = b + b
soma = 1 - b
print(round(b, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:44) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c =0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = b + b
soma = 1 - b
print(round(c, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:39:07) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c =0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = k + b
soma = 1 - b
print(round(c, 10))	
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:35) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = b + 1
soma = 1 - b
print(round(c, 10))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:36) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 - b
print(round(c, 10))	
-- OUTPUT:
-0.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:42:53) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 - c
print(round(soma, 10))	
-- EXECUTION TIME:
0.128
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
1.0603073792
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
1.0489434837
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
3.0000000035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:58) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 - c
print(round(soma, 10))	
-- OUTPUT:
1.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:43:19) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 + c
print(round(soma, 10))	
-- EXECUTION TIME:
0.163509
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9396926208
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9510565163
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-1.0000000035
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:43:27) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 + c
print(round(soma, 10))	
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:43:55) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 + c
print(round(soma, 10))	
-- EXECUTION TIME:
0.197108
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9396926208
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9510565163
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-1.0000000035
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:44:03) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 2
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = -a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b
soma = 1 + c
print(round(soma, 10))	
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:45:53) 
-- CODE:
from math import*

x = eval(input("angulo: "))
k = int(input("digite k: "))

c = 0 
z = 0
i = 0
b = 0
a = 1
b1 = 0
soma = 0

while	(i < k):
	b = a*(x**z/factorial(z))
	z = z + 2
	a = -a
	i = i + 1
	c = c + b

print(round(c, 10))	
-- EXECUTION TIME:
0.13564
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9396926208
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9510565163
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-0.9999998647
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
